--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Home
 
 <h2> Getting started </h2>
 <ul class="posts">
-  {% for post in site.categories.articles reversed %}
+  {% for post in site.posts reversed %}
   <li>
     <a href="{{ post.url }}">
       {{ post.title }}
