--- a/404.html
+++ b/404.html
@@ -8,5 +8,6 @@ permalink: /404.html
   <h1 class="page-title">404: Page not found</h1>
   <p class="lead">
   Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.
-  Perhaps you've clicked on an old event; <a href="/events/index.html">see the latest events</a> or just <a href="/">head back home</a> to find what you are looking for.</p>
+  If you're looking for <a href="/resources/">course descriptions</a> or <a href="/software/">software installation instructions</a>, 
+    scroll down the page to see all options.</p>
 </div>
