links to wiki, etc

--- a/index.html
+++ b/index.html
@@ -13,19 +13,32 @@ title: Home
 <a href="http://fredhutch.org">Fred Hutch</a>.
 <br />
 <br />
-Descriptions for our current courses are available in 
+Descriptions for our current courses,
+as well as links to publicly available training materials,
+ are available in
   <a href="/resources/">
     Resources
   </a>.
 <br />
 <br />
-Fred Hutch and SCCA employees can register for fredhutch.io courses by 
+Fred Hutch and SCCA employees can register for fredhutch.io courses by
 visiting Hutch Learning through Centernet and searching for "fredhutch.io".
+<br />
+<br />
+For more information about training opportunities,
+please see the
+  <a href="https://sciwiki.fredhutch.org/scicomputing/reference_training/">
+    Training, Community, and Finding Help page
+  </a>
+on the
+  <a href="https://sciwiki.fredhutch.org">
+    Fred Hutch Biomedical Data Science Wiki.
+  </a>
 <br />
 <br />
 Please submit requests for new courses or other training support using <a href="https://docs.google.com/forms/d/e/1FAIpQLSf5uJQ2o7aj2FC_LWq-V4nPz_RwvEjuXAGqGORSp7i1mJaUVQ/viewform?usp=sf_link">this form.</a>
 
-                                                                                      
+
 &nbsp;
 
 {% assign upcoming_header = true %}
